--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -8,7 +8,7 @@ model-viewer {
 
 
 .Hotspot {
-    background: url(../images/hotspot.svg)center no-repeat;
+    background: url(../img/hotspot.svg)center no-repeat;
     border: 0;
     width: 45px;
     height: 38px;
