--- a/css/main.css
+++ b/css/main.css
@@ -64,3 +64,49 @@ model-viewer::part(default-progress-bar) {
   height: 30px;
   background: #e83636;
 }
+
+header section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+}
+
+header nav ul li {
+  list-style: none;
+  display: inline;
+}
+
+header nav ul li a {
+  text-decoration: none;
+  padding-right: 50px;
+}
+
+footer section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-logo {
+  width: 150px;
+  height: 150px;
+}
+
+footer nav ul li {
+  list-style: none;
+  padding-bottom: 15px;
+}
+
+footer nav ul li a {
+  text-decoration: none;
+  padding-right: 50px;
+}
+
+.headings {
+  text-align: center;
+}
