--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -13,6 +13,12 @@
       justify-content: center;
 }
     
+@mixin flex-space-between {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+}
+    
 @mixin flex-center-column {
       @include flex-center;
       flex-direction: column;
