--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,19 @@
 @font-face {
-  font-family: cantarellregular;
+  font-family: manrope;
   font-weight: normal;
   font-style: normal;
-  src: url("../fonts/cantarell_regular-webfont.ttf") format("ttf");
+  src: url("../fonts/Manrope-VariableFont_wght.ttf.ttf") format("ttf");
 }
 body {
   font-family: "manrope", arial, sans-serif;
   color: #333;
   font-size: 18px;
   font-weight: 400;
+}
+
+body {
+  top: 0;
+  margin: 0;
 }
 
 model-viewer {
@@ -20,7 +25,7 @@ model-viewer {
 }
 
 .Hotspot {
-  background: url(../img/hotspot.svg) center no-repeat;
+  background: url(../images/hotspot.svg) center no-repeat;
   border: 0;
   width: 45px;
   height: 38px;
@@ -79,8 +84,11 @@ model-viewer::part(default-progress-bar) {
 }
 
 header {
-  background-color: black;
+  background-color: rgb(193, 191, 191);
   height: 100px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 header section {
@@ -102,8 +110,9 @@ header nav ul li {
 header nav ul li a {
   text-decoration: none;
   padding-right: 20px;
-  color: white;
-  font-size: 30px;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-weight: bolder;
 }
 
 @media screen and (min-width: 768px) {
@@ -111,14 +120,31 @@ header nav ul li a {
     padding-right: 50px;
   }
 }
+footer {
+  top: 20px;
+  position: relative;
+  background-color: rgb(193, 191, 191); /* Keep solid color as a base */
+  padding: 10px 0;
+}
+
+footer::before {
+  content: "";
+  position: absolute;
+  top: 10%;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  background-image: url("../images/logo.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.1;
+  z-index: 1;
+  pointer-events: none;
+}
+
 footer section {
   display: flex;
   justify-content: space-between;
-}
-
-.footer-logo {
-  width: 100px;
-  height: 100px;
 }
 
 footer nav ul li {
@@ -129,6 +155,13 @@ footer nav ul li {
 footer nav ul li a {
   text-decoration: none;
   padding-right: 50px;
+  color: black;
+}
+
+footer p {
+  text-align: center;
+  margin-top: -10px;
+  font-weight: bold;
 }
 
 #comparison-con {
