--- a/sass/abstracts/_fonts.scss
+++ b/sass/abstracts/_fonts.scss
@@ -2,5 +2,5 @@
 @use 'mixins' as m;
 
 //use @include to use a mixin, use thenamespace hen the mixin name 
-@include m.fontFace(manrope, "../fonts/Manrope-VariableFont_wght.ttf", 400);
+@include m.fontFace(manrope, "../fonts/Manrope-VariableFont_wght.ttf");
 
