--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,14 +1,32 @@
 @use '../abstracts' as a;
 
 
+footer {
+    top: 20px;
+    position: relative;
+    background-color: rgb(193, 191, 191); /* Keep solid color as a base */
+    padding: 10px 0;
+}
+
+footer::before {
+    content: "";
+    position: absolute;
+    top: 10%;
+    left: 0;
+    width: 100%;
+    height: 80%;
+    background-image: url("../images/logo.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0.1;
+    z-index: 1;
+    pointer-events: none; 
+}
+
 footer section {
     @include a.flex-just-space-between;
 }
 
-.footer-logo {
-    width: 100px;
-    height: 100px;
-}
 
 footer nav ul li {
     list-style: none;
@@ -18,5 +36,12 @@ footer nav ul li {
 footer nav ul li a {
     text-decoration: none;
     padding-right: 50px;
+    color: black;
     
+}
+
+footer p {
+    text-align: center;
+    margin-top: -10px;
+    font-weight: bold;
 }
