header and footer changes

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,7 +4,7 @@
 footer {
     top: 20px;
     position: relative;
-    background-color: rgb(193, 191, 191); /* Keep solid color as a base */
+    background-color: #EBEAFF; /* Keep solid color as a base */
     padding: 10px 0;
 }
 
