--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as a;
 
 header {
-    background-color: rgb(193, 191, 191);
+    background-color: #EBEAFF;
     height: 100px;
     position: sticky;
     top: 0;
