--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ model-viewer::part(default-progress-bar) {
 }
 
 header {
-  background-color: rgb(193, 191, 191);
+  background-color: #EBEAFF;
   height: 100px;
   position: sticky;
   top: 0;
@@ -123,7 +123,7 @@ header nav ul li a {
 footer {
   top: 20px;
   position: relative;
-  background-color: rgb(193, 191, 191); /* Keep solid color as a base */
+  background-color: #EBEAFF; /* Keep solid color as a base */
   padding: 10px 0;
 }
 
