--- a/sass/components/_earbuds.scss
+++ b/sass/components/_earbuds.scss
@@ -1,4 +1,12 @@
+ .animation {
+   margin: 0;
+    top: 0;
+ }
+
  #animation-view {
     max-width: 100%;
+    left: 0;
+    right: 0;
+    
     /* width: 100vw; */
   }
