--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,10 +2,9 @@
 
 
 footer {
-    top: 20px;
     position: relative;
-    background-color: #EBEAFF; /* Keep solid color as a base */
-    padding: 10px 0;
+    background-color:  #A2B5BB; /* Keep solid color as a base */
+    
 }
 
 footer::before {
