--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,9 +1,8 @@
 @use '../abstracts' as a;
 
 header {
-    background-color: #EBEAFF;
     height: 100px;
-    position: sticky;
+    background-color: #A2B5BB;
     top: 0;
     z-index: 1;
 }
