--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,12 @@ body {
   font-weight: 400;
 }
 
+h2 {
+  font-family: "manrope", helvetica, arial;
+  font-size: 40px;
+  font-weight: bold;
+}
+
 body {
   top: 0;
   margin: 0;
@@ -18,10 +24,14 @@ body {
 
 model-viewer {
   width: auto;
-  max-width: 1200px;
+  max-width: 100%;
   height: 550px;
-  background-color: rgb(230, 57, 57);
+  background-color: #F5EDDC;
   margin: 0 auto;
+}
+
+.model-view {
+  background-color: #F5EDDC;
 }
 
 .Hotspot {
@@ -84,9 +94,8 @@ model-viewer::part(default-progress-bar) {
 }
 
 header {
-  background-color: #EBEAFF;
   height: 100px;
-  position: sticky;
+  background-color: #A2B5BB;
   top: 0;
   z-index: 1;
 }
@@ -121,10 +130,8 @@ header nav ul li a {
   }
 }
 footer {
-  top: 20px;
   position: relative;
-  background-color: #EBEAFF; /* Keep solid color as a base */
-  padding: 10px 0;
+  background-color: #A2B5BB; /* Keep solid color as a base */
 }
 
 footer::before {
@@ -238,11 +245,57 @@ footer p {
     background-image: url("../images/left-right-slider.svg");
   }
 }
+.animation {
+  margin: 0;
+  top: 0;
+}
+
 #animation-view {
   max-width: 100%;
+  left: 0;
+  right: 0;
   /* width: 100vw; */
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+#form input, textarea {
+  padding: 22px;
+  border: 2px solid #d6d6d6;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  font: inherit;
+  width: 90%;
+  margin-left: 5%;
+}
+
+#form textarea {
+  height: 250px;
+}
+
+#form input[type=submit] {
+  padding: 12px 28px;
+  background: #ff0000;
+  color: #fff;
+  border: none;
+  transition: all 200ms ease-in;
+}
+
+#form input[type=submit]:hover {
+  background-color: #626262;
+  border-radius: 0;
 }
 
 .headings {
   text-align: center;
+}
+
+.contact, .about-pulsebeats {
+  background-color: #CFD2CF;
 }
