--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -1,9 +1,15 @@
+
+
 model-viewer {
     width: auto;
-    max-width: 1200px;
+    max-width: 100%;
     height: 550px;
-    background-color: rgb(230, 57, 57);
+    background-color: #F5EDDC;
     margin: 0 auto;
+}
+
+.model-view {
+  background-color: #F5EDDC;
 }
 
 
