--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,7 +4,17 @@
     text-align: center;
 }
 
-.contact, .about-pulsebeats {
+.headings p {
+    margin-top: -25px;
+}
+body{
+    background-color: #CFD2CF;
+}
+
+.about-pulsebeats img {
+    background-color: black;
+}
+.contact {
     background-color: #CFD2CF;
 
 }
