--- a/sass/components/_earbuds.scss
+++ b/sass/components/_earbuds.scss
@@ -1,12 +1,20 @@
- .animation {
-   margin: 0;
-    top: 0;
- }
 
  #animation-view {
     max-width: 100%;
     left: 0;
     right: 0;
+    background-color: black;
     
     /* width: 100vw; */
+  }
+
+  @media screen and (min-width: 768px) {
+
+     #animation-view {
+    max-width: 100%;
+    left: 0;
+    right: 0;
+    
+    /* width: 100vw; */
+  }
   }
