--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,35 +3,65 @@
 
 footer {
     background-color:  #A2B5BB; /* Keep solid color as a base */
+    bottom: 0;
     
 }
 
 .footer-logo {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height:50px;
     margin-top: 20px;
 }
 
-footer section {
-    @include a.flex-just-space-between;
+footer nav {
+    margin-top: 20px;
 }
 
 
-footer nav ul li {
+footer nav li {
     list-style: none;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
+    text-align: center;
 }
 
-footer nav ul li a {
+footer nav li a {
     text-decoration: none;
     padding-right: 50px;
     color: black;
     
 }
 
+.logo-icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#icons {
+    margin-top: 10px;
+}
+
+#icons a {
+    color: black;
+    margin-right: 5px;
+}
+
 footer p {
     text-align: center;
-    margin-top: -10px;
     font-weight: bold;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
+
+@media screen and (min-width: 768px) {
+    .logo-icons {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+
+    footer nav li {
+        text-align: left;
+    }
+    
 }
