html and css completed

--- a/css/main.css
+++ b/css/main.css
@@ -26,12 +26,8 @@ model-viewer {
   width: auto;
   max-width: 100%;
   height: 550px;
-  background-color: #F5EDDC;
+  background-color: #CFD2CF;
   margin: 0 auto;
-}
-
-.model-view {
-  background-color: #F5EDDC;
 }
 
 .Hotspot {
@@ -72,7 +68,7 @@ model-viewer {
 }
 
 .HotspotAnnotation h2 {
-  size: 18px; /* Set desired size for the h2 text */
+  font-size: 25px; /* Set desired size for the h2 text */
   font-weight: bold;
   margin: 0;
 }
@@ -93,6 +89,11 @@ model-viewer::part(default-progress-bar) {
   background: #e83636;
 }
 
+@media screen and (min-width: 768px) {
+  model-viewer {
+    height: 700px;
+  }
+}
 header {
   height: 100px;
   background-color: #A2B5BB;
@@ -127,6 +128,7 @@ header nav ul li a {
 @media screen and (min-width: 768px) {
   header nav ul li a {
     padding-right: 50px;
+    font-size: 25px;
   }
 }
 footer {
@@ -312,7 +314,16 @@ footer p {
   border-radius: 0;
 }
 
+@media screen and (min-width: 768px) {
+  #form input, textarea {
+    margin-top: 0;
+  }
+}
 .headings {
+  text-align: center;
+}
+
+h2 {
   text-align: center;
 }
 
@@ -330,4 +341,12 @@ body {
 
 .contact {
   background-color: #CFD2CF;
+}
+
+#contact p {
+  padding-left: 22px;
+}
+
+.text-background {
+  background-color: #F5EDDC;
 }
