--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -33,3 +33,12 @@
     background-color: #626262;
     border-radius: 0;
  }
+
+ @media screen and (min-width: 768px) {
+   #form input, textarea {
+      
+      margin-top: 0;
+     
+   }
+   
+ }
