--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,6 +4,10 @@
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+}
+
 .headings p {
     margin-top: -25px;
 }
@@ -17,4 +21,12 @@ body{
 .contact {
     background-color: #CFD2CF;
 
+}
+
+#contact p {
+    padding-left: 22px;
+}
+
+.text-background {
+    background-color: #F5EDDC;
 }
