--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -4,13 +4,11 @@ model-viewer {
     width: auto;
     max-width: 100%;
     height: 550px;
-    background-color: #F5EDDC;
+    background-color: #CFD2CF;
     margin: 0 auto;
 }
 
-.model-view {
-  background-color: #F5EDDC;
-}
+
 
 
 .Hotspot {
@@ -54,7 +52,7 @@ model-viewer {
   } 
 
   .HotspotAnnotation h2 {
-    size: 18px; /* Set desired size for the h2 text */
+    font-size: 25px; /* Set desired size for the h2 text */
     font-weight: bold;
     margin: 0;
 }
@@ -75,4 +73,12 @@ model-viewer {
   model-viewer::part(default-progress-bar){
     height: 30px;
     background: #e83636;
+  }
+
+  @media screen and (min-width: 768px) {
+    model-viewer {
+      height: 700px;
+    
+  }
+    
   }
