--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,6 +32,7 @@ header nav ul li a {
 @media screen and (min-width: 768px) {
     header nav ul li a {
         padding-right: 50px;
+        font-size: 25px;
     }
 
 }
